--- a/css/style.css
+++ b/css/style.css
@@ -239,32 +239,26 @@ ul {
 
 /* Features */
 
-.features-list .item::before {
+.image-style {
+  width: 270px;
+  height: 120px;
   display: block;
   content: "";
-  height: 120px;
   margin-bottom: 30px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
   background-color: var(--button-background-color);
   border-radius: 4px;
 }
 
-.icon-antenna::before {
-  background-image: url(../images/antenna.svg);
+.icon-margin {
+  margin: 25px 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.icon-clock::before {
-  background-image: url(../images/clock.svg);
-}
-
-.icon-diagram::before {
-  background-image: url(../images/diagram.svg);
-}
-
-.icon-astronaut::before {
-  background-image: url(../images/astronaut.svg);
+.icon-size {
+  width: 70px;
+  height: 70px;
 }
 
 .hidden-title {
