--- a/css/style.css
+++ b/css/style.css
@@ -513,12 +513,6 @@ ul {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.shadow :focus,
-.shadow :hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 .section-porfolio {
   padding-top: var(--padding-section);
   padding-bottom: var(--padding-section);
@@ -573,4 +567,10 @@ ul {
   border-bottom: 1px solid var(--color-card);
   border-right: 1px solid var(--color-card);
   border-left: 1px solid var(--color-card);
+}
+
+.card-thumb .link :focus,
+.card-thumb .link :hover {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
